# timsquery

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  Taskfile.yml  deny.toml  rustfmt.toml
benches/: benchmark_centroiding.rs  benchmark_indices.rs  plot_bench.py
data/: .gitignore  get_data.bash  slim_benchmark_results_230510_PRTC_13_S1-B1_1_12817.json  slim_benchmark_results_LFQ_timsTOFPro_diaPASEF_Condition_A_Sample_Alpha_02.json
data/sageresults/: .gitignore  build.py  check.bash  check_config.json  plot.py  ubb_elution_groups.json
metrics/: Taskfile.yml
src/: errors.rs  lib.rs  main.rs
src/models/: adapters.rs  elution_group.rs  mod.rs  queries.rs
src/models/aggregators/: mod.rs  raw_peak_agg.rs  rolling_calculators.rs  streaming_aggregator.rs
src/models/aggregators/raw_peak_agg/: chromatogram_agg.rs  mod.rs  multi_chromatogram_agg.rs  point_agg.rs
src/models/aggregators/raw_peak_agg/multi_chromatogram_agg/: aggregator.rs  arrays.rs  base.rs  mod.rs  multi_chromatogram_agg.rs  scored_arrays.rs
src/models/frames/: expanded_frame.rs  expanded_window_group.rs  mod.rs  peak_in_quad.rs  raw_frames.rs  raw_peak.rs  single_quad_settings.rs
src/models/indices/: mod.rs  raw_file_index.rs  transposed_quad_index.rs
src/models/indices/expanded_raw_index/: mod.rs  model.rs
src/models/indices/transposed_quad_index/: mod.rs  peak_bucket.rs  quad_index.rs  quad_splitted_transposed_index.rs
src/queriable_tims_data/: mod.rs  queriable_tims_data.rs
src/traits/: aggregator.rs  indexed_data.rs  mod.rs  queriable_data.rs  tolerance.rs
src/utils/: compress_explode.rs  correlation.rs  display.rs  dtw.rs  frame_processing.rs  math.rs  mod.rs  sorting.rs  tolerance_ranges.rs
