[package]
name = "timsquery"
version = "0.2.0"
edition = "2021"

[dependencies]
# timsrust = "=0.3.0"
# timsrust = { git = "https://github.com/MannLabs/timsrust.git", rev = "266fa86b206a2998e61e6c0acce23953864dbc9e" }
timsrust = "0.4.0"
rayon = "1.5"
serde = { version = "1.0.204", features = ["derive"] }
itertools = "0.13.0"
serde_json = "1.0.122"
rand = "0.8.5"
rand_chacha = "0.3.1"
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.17", features = ["derive"], optional = true }
indicatif = { version = "0.17.8", features = ["rayon"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
clap = ["dep:clap"]
build-binary = ["clap"]

[[bin]]         
name = "timsquery"    
required-features = ["build-binary"]

[[bench]]
name = "benchmark_indices"
harness = false


[profile.release]
opt-level = 3
lto = 'fat'
panic = 'abort'
codegen-units = 1
#  369.31  elem/s with 4 units/thin lto
#  401.37  elem/s with 1 units/fat lto