[package]
name = "timsquery"
version = "0.4.0"
edition = "2021"

[dependencies]
timsrust = "0.4.1"
rayon = "1.5"
indicatif = { version = "0.17.8", features = ["rayon"] }

clap = { version = "4.5.17", features = ["derive"], optional = true }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
rmp-serde = "1.3.0"

itertools = "0.13.0"

rand = "0.8.5"
rand_chacha = "0.3.1"

log = "0.4.22"
env_logger = "0.11.5"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
clap = ["dep:clap"]
build-binary = ["clap"]

[[bin]]
name = "timsquery"
required-features = ["build-binary"]

[[bench]]
name = "benchmark_indices"
harness = false


[profile.release]
opt-level = 3
lto = 'fat'
panic = 'abort'
codegen-units = 1
