[package]
name = "timsquery"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
timsrust = "0.4.1"
rayon = "1.5"
indicatif = { version = "0.17.8", features = ["rayon"] }

clap = { version = "4.5.17", features = ["derive"], optional = true }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
rmp-serde = "1.3.0"

tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }
tracing-bunyan-formatter = "0.3.9"
tracing-chrome = "0.7.2"


# These are only used for benchmarks
rand = { version = "0.8.5", optional = true }
rand_chacha = { version = "0.3.1", optional = true }


[features]
clap = ["dep:clap"]
build-binary = ["clap"]
bench = ["dep:rand", "dep:rand_chacha"]

[[bin]]
name = "timsquery"
required-features = ["build-binary"]

[[bin]]
name = "benchmark_indices"
path = "benches/benchmark_indices.rs"
required-features = ["bench"]

[profile.release]
opt-level = 3
lto = 'fat'
panic = 'abort'
codegen-units = 1
